# cmake_test

./: CMakeLists.txt  my.c  my.lds  readme.txt  toolchain.cmake
