PROJECT(FreeRtos)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

ENABLE_LANGUAGE(ASM)

SET(CMAKE_STATIC_LIBRARY_PREFIX)
SET(CMAKE_STATIC_LIBRARY_SUFFIX)

SET(CMAKE_EXECUTABLE_LIBRARY_PREFIX)
SET(CMAKE_EXECUTABLE_LIBRARY_SUFFIX)
#set(CMAKE_EXE_LINKER_FLAGS_DEBUG " -T ${CMAKE_SOURCE_DIR}/my.lds")# -static")

#SET(CMAKE_EXE_LINK_EXECUTABLE "/usr/bin/ld")
AUX_SOURCE_DIRECTORY(. MYSRC)
ADD_EXECUTABLE(FR ${MYSRC} )

SET_TARGET_PROPERTIES(FR PROPERTIES OUTPUT_NAME "fr.elf")
set(CMAKE_BUILD_TYPE Debug)

#set_target_properties(FR PROPERTIES LINK_DEPENDS ${CMAKE_SOURCE_DIR}/my.lds)
#SET_SOURCE_FILES_PROPERTIES(dummy.c PROPERTIES OBJECT_DEPENDS ${CMAKE_SOURCE_DIR}/my.lds)

